# Brain-Net-Architecture-Specification-v1.0

./: .gitignore  Architecture.md  CHANGELOG.md  GITHUB_SETUP_GUIDE.md  Implement Plan.md  README.md  RUN_GUIDE.md  Responsibilities.md  Sprint Plan.md  ci.yml  pyproject.toml  pytest.ini  requirements.txt
data/: generate_mock_dataset.py
docs/architecture/: ARCHITECTURE.md
docs/ethics/: COGNITIVE_LIBERTY.md  COMPLIANCE_MATRIX.md  DATA_GOVERNANCE.md
docs/metrics/: QUALITY_METRICS.md
docs/planning/: IMPLEMENTATION_PLAN.md  RESPONSIBILITIES.md  ROADMAP_PHASE2.md
docs/sprints/: SPRINT-1-FIRST-WHISPER.md  SPRINT-2-SIGNAL-BRIDGE.md  SPRINT-3-DEEP-CALIBRATION.md  SPRINT-4-MVP-FINAL.md
notebooklm/: 01_CONCEPTUAL_THEORETICAL.md  02_ARCHITECTURE_FORMALIZATION.md  03_IMPLEMENTATION_DEPLOYMENT.md  04_INFOGRAPHICS_QUIZZES.md
src/: brain_net_pipeline.py  gui_app.py  web_gui.py
src/bci/: clean_eeg_data.py  connect_bci.py  neural_classifier.py
src/crypto/: mock_qkd_aes.py
src/daft/: daft_validator.py  domain_interface.py
src/metrics/: quality_metrics.py
src/protocol/: context_frame.py  ttp_packet.py  ttp_router.py  virtual_network.py
src/security/: audit_log.py  brain_firewall.py  consensual_handshake.py  ethics_rule_engine.py  hitl_checkpoint.py
tests/: conftest.py  test_negative_conditions.py
tests/e2e/: test_brain_net_e2e.py
tests/integration/: test_daft_pipeline.py  test_security_stack.py
tests/unit/: test_audit_log.py  test_bci_components.py  test_brain_firewall.py  test_brain_net_pipeline.py  test_consensual_handshake.py  test_context_frame.py  (+10 more)
